// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test register test handle 1`] = `
<div
  id="bg"
>
  <div
    id="regDiv"
  >
    <p>
      请输入用户名:
    </p>
    <Input
      name="input"
      onBlur={[Function]}
      placeholder="Enter your username"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <div />
    <p>
      请输入密码:
    </p>
    <Password
      action="click"
      iconRender={[Function]}
      onBlur={[Function]}
      placeholder="Enter your password"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      visibilityToggle={true}
    />
    <p>
      请再次输入密码:
    </p>
    <Password
      action="click"
      iconRender={[Function]}
      onBlur={[Function]}
      placeholder="Enter your password again"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      visibilityToggle={true}
    />
    <div />
    <div>
      <p>
        性别：
      </p>
      <Memo([object Object])
        onChange={[Function]}
        value={0}
      >
        <Radio
          type="radio"
          value="Male"
        >
          男
        </Radio>
        <Radio
          type="radio"
          value="Female"
        >
          女
        </Radio>
      </Memo([object Object])>
    </div>
    <p>
      请输入手机号:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your phone number"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <p>
      请输入邮箱:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your address"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <div />
    <p>
      上传头像：
    </p>
    <UploadImage
      onCommitImage={[Function]}
    />
    <Button
      block={false}
      ghost={false}
      htmlType="button"
      loading={false}
      onClick={[Function]}
    >
      提交
    </Button>
    <div />
  </div>
</div>
`;

exports[`test register test initialized state 1`] = `
<div
  id="bg"
>
  <div
    id="regDiv"
  >
    <p>
      请输入用户名:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your username"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <div />
    <p>
      请输入密码:
    </p>
    <Password
      action="click"
      iconRender={[Function]}
      onBlur={[Function]}
      placeholder="Enter your password"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      visibilityToggle={true}
    />
    <p>
      请再次输入密码:
    </p>
    <Password
      action="click"
      iconRender={[Function]}
      onBlur={[Function]}
      placeholder="Enter your password again"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      visibilityToggle={true}
    />
    <div />
    <div>
      <p>
        性别：
      </p>
      <Memo([object Object])
        onChange={[Function]}
        value={0}
      >
        <Radio
          type="radio"
          value="Male"
        >
          男
        </Radio>
        <Radio
          type="radio"
          value="Female"
        >
          女
        </Radio>
      </Memo([object Object])>
    </div>
    <p>
      请输入手机号:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your phone number"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <p>
      请输入邮箱:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your address"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <div />
    <p>
      上传头像：
    </p>
    <UploadImage
      onCommitImage={[Function]}
    />
    <Button
      block={false}
      ghost={false}
      htmlType="button"
      loading={false}
      onClick={[Function]}
    >
      提交
    </Button>
    <div />
  </div>
</div>
`;

exports[`test register test input operation 1`] = `
<div
  id="bg"
>
  <div
    id="regDiv"
  >
    <p>
      请输入用户名:
    </p>
    <Input
      name="input"
      onBlur={[Function]}
      placeholder="Enter your username"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <div />
    <p>
      请输入密码:
    </p>
    <Password
      action="click"
      iconRender={[Function]}
      onBlur={[Function]}
      placeholder="Enter your password"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      visibilityToggle={true}
    />
    <p>
      请再次输入密码:
    </p>
    <Password
      action="click"
      iconRender={[Function]}
      onBlur={[Function]}
      placeholder="Enter your password again"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      visibilityToggle={true}
    />
    <div>
      <Alert
        message="请输入相同的密码"
        type="error"
      />
    </div>
    <div>
      <p>
        性别：
      </p>
      <Memo([object Object])
        onChange={[Function]}
        value={0}
      >
        <Radio
          type="radio"
          value="Male"
        >
          男
        </Radio>
        <Radio
          type="radio"
          value="Female"
        >
          女
        </Radio>
      </Memo([object Object])>
    </div>
    <p>
      请输入手机号:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your phone number"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <p>
      请输入邮箱:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your address"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <div />
    <p>
      上传头像：
    </p>
    <UploadImage
      onCommitImage={[Function]}
    />
    <Button
      block={false}
      ghost={false}
      htmlType="button"
      loading={false}
      onClick={[Function]}
    >
      提交
    </Button>
    <div />
  </div>
</div>
`;

exports[`test register test input username 1`] = `
<div
  id="bg"
>
  <div
    id="regDiv"
  >
    <p>
      请输入用户名:
    </p>
    <Input
      name="input"
      onBlur={[Function]}
      placeholder="Enter your username"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <div>
      <Alert
        message="该用户名已被注册过"
        type="error"
      />
    </div>
    <p>
      请输入密码:
    </p>
    <Password
      action="click"
      iconRender={[Function]}
      onBlur={[Function]}
      placeholder="Enter your password"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      visibilityToggle={true}
    />
    <p>
      请再次输入密码:
    </p>
    <Password
      action="click"
      iconRender={[Function]}
      onBlur={[Function]}
      placeholder="Enter your password again"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      visibilityToggle={true}
    />
    <div />
    <div>
      <p>
        性别：
      </p>
      <Memo([object Object])
        onChange={[Function]}
        value={0}
      >
        <Radio
          type="radio"
          value="Male"
        >
          男
        </Radio>
        <Radio
          type="radio"
          value="Female"
        >
          女
        </Radio>
      </Memo([object Object])>
    </div>
    <p>
      请输入手机号:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your phone number"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <p>
      请输入邮箱:
    </p>
    <Input
      onBlur={[Function]}
      placeholder="Enter your address"
      prefix={
        <ForwardRef(UserOutlined)
          className="site-form-item-icon"
        />
      }
      type="text"
    />
    <div />
    <p>
      上传头像：
    </p>
    <UploadImage
      onCommitImage={[Function]}
    />
    <Button
      block={false}
      ghost={false}
      htmlType="button"
      loading={false}
      onClick={[Function]}
    >
      提交
    </Button>
    <div />
  </div>
</div>
`;
